# blackfin-plus-gnu

./: README.md
binutils-gdb/gas/config/: bfin-aux.h  bfin-defs.h  bfin-lex.l  bfin-parse.y  tc-bfin.c
binutils-gdb/gas/doc/: c-bfin.texi
binutils-gdb/gas/testsuite/gas/bfin/: arithmetic.d  arithmetic.s  bfin.exp  cmplx.d  cmplx.s  dsp32.d  dsp32.s  pseudo.d  pseudo.s
binutils-gdb/include/opcode/: bfin.h
binutils-gdb/opcodes/: bfin-dis.c
buildscript/: .gitignore  build.sh
buildscript/lib/: autotools.sh  funcs.sh  lib.sh  prereqs.sh  resume.sh
gcc/gcc/common/config/bfin/: bfin-common.c
gcc/gcc/config/bfin/: bfin-opts.h  bfin.h  elf.h  t-bfin-elf
gcc/gcc/doc/: invoke.texi
gcc/libgloss/32/faketarget/: Makefile
gcc/libgloss/32/faketarget/bfin/: Makefile
gcc/libgloss/32/faketarget/libnosys/: Makefile
gcc/libgloss/bfin/: Makefile.in  bf706.ld
gcc/libgloss/bfin/include/: cdefBF70x_legacy.h
gcc/libgloss/bfin/include/sys/: _adi_platform.h
include/: app_start.S  link-bf706.ld
ldr-utils/: .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  blackfin_defines.h  config.h.in  configure  configure.ac  dxe_jump.h  dxes.h  headers.h  helpers.c  helpers.h  icon.rc  ldr.c  ldr.h  ldr_elf.c  ldr_elf.h  lfd.c  lfd.h  lfd_bf506.c  lfd_bf518.c  lfd_bf527.c  lfd_bf533.c  lfd_bf537.c  lfd_bf548.c  lfd_bf561.c  lfd_bf592.c  lfd_bf609.c  lfd_bf706.c  local-version.sh  sdp.h  termios-mingw.c
ldr-utils/gnulib/: README  modules
ldr-utils/gnulib/lib/: Makefile.am  Makefile.in  msvc-inval.c
ldr-utils/gnulib/m4/: gnulib-cache.m4  gnulib-comp.m4
ldr-utils/tests/: Makefile.am  Makefile.in  atlocal.in  create.at  dump.at  fake-loadee.c  load.at  show.at  source.at  testsuite.at  usage.at
ldr-utils/tests/elfs/: POST.dxe  bad.elf  bss.elf  final-split.elf  section.elf
ldr-utils/tests/ldrs/: bf548.ldr  spi.ldr  uart.ldr
openocd/: README
openocd/buildscript/: BuildToolChain  README.openocd  README.qemu  staging-compiler
openocd/buildscript/lib/: _bash.sh  autotools.sh  bash.sh  funcs.sh  lib.sh
openocd/hidapi/: .gitattributes  Makefile.am  configure.ac
openocd/hidapi/hidtest/: Makefile.am
openocd/hidapi/libusb/: Makefile.am
openocd/hidapi/pc/: hidapi.pc.in
openocd/hidapi/windows/: hidapi.sln  hidapi.vcxproj  hidtest.vcxproj
openocd/libftdi-1.0/: Makefile.in  aclocal.m4  config.h.in  configure
openocd/libftdi-1.0/bindings/: Makefile.in
openocd/libftdi-1.0/bindings/python/: Makefile.in
openocd/libftdi-1.0/doc/: Makefile.in
openocd/libftdi-1.0/examples/: Makefile.in
openocd/libftdi-1.0/ftdipp/: Makefile.in
openocd/libftdi-1.0/src/: Makefile.in  ftdi.c
openocd/libusb/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
openocd/libusb/doc/: Makefile.in
openocd/libusb/examples/: Makefile.in
openocd/libusb/libusb/: Makefile.in
openocd/libusb/libusb/os/: windows_winusb.c
openocd/libusb/msvc/: ddk_build.cmd
openocd/libusb/tests/: Makefile.in
openocd/openocd/: .cproject  .project  ADI-FILES.in  Makefile.am  Makefile.in  aclocal.m4  config.h.in  config_subdir.m4  configure  configure.ac  expat.m4  git-rev  guess-rev.sh  openocd_blackfin_config.dtd  openocd_memory_map.dtd  options.eipa
openocd/openocd/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
openocd/openocd/contrib/loaders/flash/: aducm302x.s
openocd/openocd/doc/: Makefile.in  openocd.info  openocd.info-1  openocd.info-2  openocd.texi  stamp-vti
openocd/openocd/jimtcl/autosetup/: cc.tcl
openocd/openocd/src/: Makefile.am  Makefile.in  openocd.c
openocd/openocd/src/flash/: Makefile.in
openocd/openocd/src/flash/nand/: Makefile.in
openocd/openocd/src/flash/nor/: Makefile.am  Makefile.in  aducm302x.c  core.c  drivers.c  lpcspifi.c  mrvlqspi.c
openocd/openocd/src/helper/: Makefile.in  command.h  configuration.c  configuration.h  log.c  log.h  replacements.h  types.h
openocd/openocd/src/jtag/: Makefile.in  adapter.c  core.c  interface.h  interfaces.c  jtag.h
openocd/openocd/src/jtag/aice/: Makefile.in
openocd/openocd/src/jtag/drivers/: Makefile.am  Makefile.in  ft2232.c  ft2232.h  ftdi.c  ice1000.c
openocd/openocd/src/jtag/drivers/usb_blaster/: Makefile.in
openocd/openocd/src/jtag/hla/: Makefile.in
openocd/openocd/src/pld/: Makefile.in  pld.c
openocd/openocd/src/rtos/: Makefile.in  rtos.c
openocd/openocd/src/server/: Makefile.in  gdb_server.c  server.c
openocd/openocd/src/svf/: Makefile.in  svf.c
openocd/openocd/src/transport/: Makefile.in  transport.c
openocd/openocd/src/xsvf/: Makefile.in  xsvf.c
openocd/openocd/tcl/: mem_helper.tcl  memory.tcl  mmr_helpers.tcl
openocd/openocd/tcl/board/: adspsc573_ezkit.cfg  adspsc584_ezbrd.cfg  adspsc589_ezbrd.cfg  adspsc5xx_ezbrd.tcl  bf537_ezkit.cfg  bf561_ezkit.cfg
openocd/openocd/tcl/cpu/blackfin/: blackfin.cfg
openocd/openocd/tcl/interface/: cmsis-dap.cfg  ice1000.cfg  ice2000.cfg  jlink.cfg
openocd/openocd/tcl/interface/ftdi/: gnice+.cfg  gnice.cfg
uClibc/include/: libc-symbols.h
